--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <div id="quiz-container">
         <h1>ブルアカイントロクイズ</h1>
-        <button id="play-audio">このBGMが流れていたシーンは？</button>
+        <button id="play-audio">このBGMが流れていたシーン/イベントは？</button>
         <div id="options" class="options-container"></div>
         <div id="result"></div>
     </div>
